--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body>
     <h1>Home Page</h1>
     <h2>Cities</h2>
-    <a href="cities.html">Cities</a>
+    <a href="cities.html">/the-forgotten-word/Cities</a>
     <h2>Lore</h2>
-    <a href="lore.html">Lore</a>
+    <a href="lore.html">/the-forgotten-word/Lore</a>
   </body>
 </html>
