--- a/cities.html
+++ b/cities.html
@@ -27,7 +27,7 @@
     </style>
   </head>
   <body>
-    <a href="/the-forgotten-word/index.html">Home Page</a>
+    <a href="index.html">Home Page</a>
     <h1>Cities</h1>
     <h2>City of Cinders</h2>
     <img class="Cinders" src="images/CityOfCinders.png" alt="City of Cinders" />
