--- a/characters/imrinar-Orthenlin.html
+++ b/characters/imrinar-Orthenlin.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <a href="../index.html">Home Page</a>
-    <a href="/cities.html">Cities</a>
+    <a href="../cities.html">Cities</a>
     <h1>Imrinar Orthenlin</h1>
     <p>
       Murky Den Captain. We don't know much about him, but he has intrusted us
