--- a/characters/kriv.html
+++ b/characters/kriv.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <a href="../index.html">Home Page</a>
-    <a href="/cities.html">Cities</a>
+    <a href="../cities.html">Cities</a>
     <h1>Kriv</h1>
     <p>
       A Minotaur blacksmith and a Seeker. He has been helping in the war efforts
