--- a/characters/mirabela.html
+++ b/characters/mirabela.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <a href="../index.html">Home Page</a>
-    <a href="/cities.html">Cities</a>
+    <a href="../cities.html">Cities</a>
     <h1>Mirabela</h1>
     <p>
       Part succubus. Claims to want to be a mother figure to us but there's a
