--- a/characters/petruzzo-De-Mira.html
+++ b/characters/petruzzo-De-Mira.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <a href="../index.html">Home Page</a>
-    <a href="/cities.html">Cities</a>
+    <a href="../cities.html">Cities</a>
     <h1>Petruzzo De'Mira</h1>
     <p>
       Father figure but a mystery for the most part. He is apart of the Ank'Mari
