--- a/characters/verbino-Agatelo.html
+++ b/characters/verbino-Agatelo.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <a href="../index.html">Home Page</a>
-    <a href="/cities.html">Cities</a>
+    <a href="../cities.html">Cities</a>
     <h1>Verbino Agatelo</h1>
     <p>
       Mentor of Bosna. So far not much else but he appears to be friends with
