--- a/lore.html
+++ b/lore.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <a href="../index.html">Home Page</a>
+    <a href="/the-forgotten-word/index.html">Home Page</a>
     <h1>Lore</h1>
     <p>
       As the world decends into darkness and the void terrorizes the world, 3
