--- a/lore.html
+++ b/lore.html
@@ -9,6 +9,7 @@
   <body>
     <a href="/the-forgotten-word/index.html">Home Page</a>
     <h1>Lore</h1>
+    <h2>Majority coming soon...</h2>
     <p>
       As the world decends into darkness and the void terrorizes the world, 3
       your children are being taken by caravan to a dwarven city for refuge.
