--- a/lore.html
+++ b/lore.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <a href="/the-forgotten-word/index.html">Home Page</a>
+    <a href="index.html">Home Page</a>
     <h1>Lore</h1>
     <h2>Majority coming soon...</h2>
     <p>
