--- a/index.html
+++ b/index.html
@@ -4,13 +4,30 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Home Page</title>
+    <style>
+      .Forgotten {
+        height: 500px;
+        border-radius: 10px;
+        margin-right: 20px;
+      }
+    </style>
   </head>
   <body>
-    <h1>Home Page</h1>
-    <h2>Cities</h2>
-    <a href="cities.html">Cities</a>
-    <h2>Lore</h2>
-    <a href="lore.html">Lore</a>
+    <h1>The Forgotten World</h1>
+    <img
+      class="Forgotten"
+      src="images/icyWasteland.png"
+      alt="The Forgotten World"
+    />
+    <p>
+      9 years ago, this world became infested with void. The heroes tasked to
+      stop it lost and the world was engulfed with darkness as the sun was
+      destroyed. Now, the only light that is left are the fragments of the moon
+      still left in the sky.
+    </p>
+    <a href="cities.html"><h2>Cities</h2></a>
+    <a href="characters.html"><h2>Characters</h2></a>
+    <a href="lore.html"><h2>Lore</h2></a>
   </body>
 </html>
