--- a/lore.html
+++ b/lore.html
@@ -31,7 +31,7 @@
       grow up in an orphanage.
     </p>
     <p>
-      fow 9 years, the kids grew up in the City with the ocasional visit or
+      for 11 years, the kids grew up in the City with the ocasional visit or
       letter from Petruzzo.
     </p>
   </body>
