--- a/characters/petruzzo-De-Mira.html
+++ b/characters/petruzzo-De-Mira.html
@@ -27,7 +27,7 @@
     </p>
     <p>
       After becoming undead, his appearance changed a bit. He is now mostly
-      rotten and skeletal and also has 1 blue and 1 purple eye. He usually likes
+      rotten and skeletal and also has 1 purple eye and the eye socket where he lost his eye now glows red. He usually likes
       to wear hooded cloaks now...
     </p>
     <p>
