--- a/cities.html
+++ b/cities.html
@@ -50,7 +50,7 @@
       Petruzzo.
     </p>
     <a href="characters/verbino-Agatelo.html">more</a>
-    <h2>Merky Den</h2>
+    <h2>Murky Den</h2>
     <img class="Den" src="images/Tunneltown.png" alt="Merky Den" />
     <p>
       Once a peaceful town has now become a continuous warzone against the
