--- a/lore.html
+++ b/lore.html
@@ -12,7 +12,7 @@
     <h2>Majority coming soon...</h2>
     <p>
       As the world decends into darkness and the void terrorizes the world, 3
-      your children are being taken by caravan to a dwarven city for refuge.
+      children are being taken by caravan to a dwarven city for refuge.
     </p>
     <p>
       However, after getting there, it is realized that the place has already
