--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </style>
   </head>
   <body>
-    <h1>The Forgotten World</h1>
+    <h1>Chronicles of Tet'Tariel</h1>
     <img
       class="Forgotten"
       src="images/icyWasteland.png"
