--- a/index.html
+++ b/index.html
@@ -4,24 +4,36 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home Page</title>
+    <title>Chronicles of Tet'Tariel</title>
     <style>
+      body {
+        font-family: Arial;
+      }
       .Forgotten {
         height: 500px;
         border-radius: 10px;
         margin-right: 20px;
       }
+      .description {
+        width: 1000px;
+      }
+
+      .dark-mode {
+        float: right;
+      }
     </style>
   </head>
   <body>
+    <button class="dark-mode">Dark Mode</button>
     <h1>Chronicles of Tet'Tariel</h1>
+
     <h2>The contours of memories are washed away by the River of Time</h2>
     <img
       class="Forgotten"
       src="images/icyWasteland.png"
       alt="The Forgotten World"
     />
-    <p>
+    <p class="description">
       9 years ago, this world became infested with void. The heroes tasked to
       stop it lost and the world was engulfed with darkness as the sun was
       destroyed. Now, the only light that is left are the fragments of the moon
@@ -43,3 +55,4 @@
     </ul>
   </body>
 </html>
+
