--- a/characters/mirabela.html
+++ b/characters/mirabela.html
@@ -5,10 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      p {
+        font-family: Arial;
+        width: 1000px;
+        line-height: 20px;
+      }
+    </style>
   </head>
   <body>
     <a href="../index.html">Home Page</a>
-    <a href="../cities.html">Cities</a>
+    <a href="/cities.html">Cities</a>
     <h1>Mirabela</h1>
     <p>
       Part succubus. Claims to want to be a mother figure to us but there's a
@@ -20,6 +27,65 @@
     <p>
       Being a powerful witch, Mirabel has helped us with suplies and information
       throughout our journeys in the Merky Den.
+    </p>
+    <h2>DM stories</h2>
+    <p>
+      It was a dark night. Dark, yet clear. The moon was clear and bright in the
+      sky above, and through the wood, a young girl of pale complexion and
+      infernal blood was running for her life. She just finished 16 winters and
+      now the only thing on her mind was that she may not experience the 17th
+      one. Running and running through the dense foliage of the dark woods, her
+      long, beautiful dress was cut by branches and muddied from every fall.
+      Yet, she needed to run. Her life depended on that. It was a story as old
+      as there were daughters of dukes. An assassination? Maybe. An abduction?
+      Possible. Some religious purists wanting to rid this world from the
+      infernal taint? Well, that’s a very personal kind of problem. Even though
+      she tried to hide it with luxurious hairstyling and expensive accessories,
+      you can only do so much with those horns and long ears. Still, that dint
+      matter now. Now, she needed to run. Whoever was hunting her was close. The
+      light of their torches was clear to see. Run, fall, run, and once again,
+      fall. This time, there was a problem though. A slope, and she dived right
+      into a dark abyss. To some, this is a curse, but to others, a blessing. To
+      her, it was both. Battered and bruised, she ended up in a deep hole hidden
+      in the foliage with no way of getting out. As she was lying there, the
+      only sound she could hear was the men that hunted her. By the star’s
+      grace, they walked past and left her behind. One problem dealt with.
+      Another now started to sink in. She was doomed. She was doomed to live out
+      the rest of her life in this hole. A short life, very short life. Well,
+      that said, she poses something that would help her that many people don’t
+      have. Magic. Though it would be not much help here, except for making a
+      fire from the twigs that were lying there. For 2 days, she managed to get
+      by, but unfortunately, malnutrition was kicking in. She had heat from the
+      fire she could conjure up, and water was down to pure luck. It happened to
+      rain a fair while, so she managed to get by. But now, hunger truly had
+      become unbearable. To some, this would be a wakeup call for the last ounce
+      of strength to try to get out. That’s at least how stories go. But not
+      her. Her legs were bruised severely, and she never belonged to those that
+      had much in the physical department. Even the simple fact that she managed
+      to last that long defied all odds. But even if she managed to get out, a
+      pack of wolves were circling around her muddy prison. All was lost. Then,
+      she heard the skirmishing sound of whimpering animals. And as she looked
+      up, she saw a hooded head looking into the deep hole. "You… need… help?"
+      the figured said in the way of someone who just learned the basics of a
+      language. "Please stranger, I don’t know how long I can take it more," She
+      replied. Let Hell take the caution. This was her only chance. So, she
+      decided to beg the stranger for help. There was no reply and the figure
+      disappeared. That was the longest 10 minutes of her life. Was that just
+      her imagination? Was madness already setting in? As she started to cry and
+      contemplate her own sanity, a piece of rope hit her on her head. "Tie to
+      waist. I pull." The figure said. She wiped her tears and did as told. As
+      she was pulled up, true joy came over her. All the possibilities that
+      could happen, good or bad, it did not matter. True joy was overcoming her
+      from the simple thing, ascending out of that dark, damp hole. When she
+      finally rose out of the hole and on to the surface, she had taken a
+      moment. A short second to thank the heavens and shed tears for finally
+      getting out. When she composed herself and turned to the kind stranger who
+      helped her, terror overcome her. That was no normal man. It was a kid. No
+      more than 10 winters. Maybe 11. But this was not the source of her fear.
+      No. it was those purple eyes. The eyes of the Templars. The eyes of those
+      that were considered sinners, monsters, undeserving. Eyes of those that
+      were the most savage and brutal soldiers that the Empire subjugated and
+      turned into a personal army of Death.
     </p>
   </body>
 </html>
