--- a/index.html
+++ b/index.html
@@ -5,54 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chronicles of Tet'Tariel</title>
-    <style>
-      body {
-        font-family: Arial;
-      }
-      .Forgotten {
-        height: 500px;
-        border-radius: 10px;
-        margin-right: 20px;
-      }
-      .description {
-        width: 1000px;
-      }
-
-      .dark-mode {
-        float: right;
-      }
-    </style>
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <button class="dark-mode">Dark Mode</button>
-    <h1>Chronicles of Tet'Tariel</h1>
+    <h1 class="header">Chronicles of Tet'Tariel</h1>
 
-    <h2>The contours of memories are washed away by the River of Time</h2>
+    <h2 class="header">
+      The contours of memories are washed away by the River of Time
+    </h2>
     <img
       class="Forgotten"
       src="images/icyWasteland.png"
       alt="The Forgotten World"
     />
     <p class="description">
-      9 years ago, this world became infested with void. The heroes tasked to
+      11 years ago, the world became infested with void. The heroes tasked to
       stop it lost and the world was engulfed with darkness as the sun was
       destroyed. Now, the only light that is left are the fragments of the moon
       still left in the sky.
     </p>
-    <ul>
-      <li>
+    <div class="cities">
+      <p>
         <a href="cities.html"><h3>Cities</h3></a>
-      </li>
-      <li>
+      </p>
+      <p>
         <a href="characters.html"><h3>Characters</h3></a>
-      </li>
-      <li>
+      </p>
+      <p>
         <a href="lore.html"><h3>Lore</h3></a>
-      </li>
-      <li>
+      </p>
+      <p>
         <a href="about.html"><h3>About/Why</h3></a>
-      </li>
-    </ul>
+      </p>
+    </div>
   </body>
 </html>
 
