--- a/index.html
+++ b/index.html
@@ -5,39 +5,55 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chronicles of Tet'Tariel</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <button class="dark-mode">Dark Mode</button>
-    <h1 class="header">Chronicles of Tet'Tariel</h1>
-
-    <h2 class="header">
-      The contours of memories are washed away by the River of Time
-    </h2>
-    <img
-      class="Forgotten"
-      src="images/icyWasteland.png"
-      alt="The Forgotten World"
-    />
-    <p class="description">
-      11 years ago, the world became infested with void. The heroes tasked to
-      stop it lost and the world was engulfed with darkness as the sun was
-      destroyed. Now, the only light that is left are the fragments of the moon
-      still left in the sky.
-    </p>
-    <div class="cities">
-      <p>
-        <a href="cities.html"><h3>Cities</h3></a>
-      </p>
-      <p>
-        <a href="characters.html"><h3>Characters</h3></a>
-      </p>
-      <p>
-        <a href="lore.html"><h3>Lore</h3></a>
-      </p>
-      <p>
-        <a href="about.html"><h3>About/Why</h3></a>
-      </p>
+    <div class="container">
+      <h1>Chronicles of Tet'Tariel</h1>
+      <div class="main-area">
+        <div class="button-format-parent">
+          <div class="button-format-child">
+            <form class="button" action="characters.html">
+              <button type="submit"><h3>Characters</h3></button>
+            </form>
+          </div>
+          <div class="button-format-child">
+            <form class="button" action="Cities.html">
+              <button type="submit"><h3>Cities</h3></button>
+            </form>
+          </div>
+          <div class="button-format-child">
+            <form class="button" action="lore.html">
+              <button type="submit"><h3>Lore</h3></button>
+            </form>
+          </div>
+          <div class="button-format-child">
+            <form class="button" action="about.html">
+              <button type="submit"><h3>About</h3></button>
+            </form>
+          </div>
+        </div>
+        <h2 class="header">
+          The contours of memories are washed away by the River of Time
+        </h2>
+        <img
+          class="wasteland"
+          src="images/frozenwasteland.png"
+          alt="frozenwasteland"
+        />
+        <p class="description">
+          Eleven years ago, the world became infested with void. The heroes,
+          tasked to stop this catastrophe, lost, and the world was engulfed with
+          darkness as the sun was destroyed. Now, the only light that is left
+          are the scattered fragments of the moon still left in the sky.
+        </p>
+      </div>
     </div>
   </body>
 </html>
