--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </form>
           </div>
           <div class="button-format-child">
-            <form class="button" action="Cities.html">
+            <form class="button" action="cities.html">
               <button type="submit"><h3>Cities</h3></button>
             </form>
           </div>
