--- a/characters.html
+++ b/characters.html
@@ -32,7 +32,7 @@
         border: solid;
         border-radius: 3px;
         border-width: 2px;
-        border-color: rgba(0, 2, 148, 0.5);
+        border-color: rgba(28, 28, 28, 0.9);
       }
       .character-image:hover {
         cursor: pointer;
@@ -57,12 +57,26 @@
         margin-left: 205px;
         margin-right: 20px;
       }
+      .button {
+        float: left;
+      }
     </style>
   </head>
   <body>
     <div class="container">
       <h1>Characters</h1>
       <div class="main-area">
+
+        <div class="button-format-parent">
+          <div class="button-format-child">
+            <form class="button" action="index.html">
+              <button type="submit"><h3>Back to Home Page</h3></button>
+            </form>
+          </div>
+        </div>
+
+
+
         <div class="character-entry">
           <img class="character-image"src="characterImages/bosnaArt.png"alt="characterImages"/>
           <h3 class="character-name">Bosna</h3>
