--- a/cities.html
+++ b/cities.html
@@ -6,7 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="keywords" content="HTML, CSS" />
     <meta name="description" content="Hello Friend" />
-    <title>First Web Page</title>
+    <title>Tet'Tariel Cities</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="all.css" />
     <style>
       .Den {
         width: 500px;
@@ -19,61 +24,54 @@
         border-radius: 10px;
         margin-right: 20px;
       }
+      .button {
+        float: left;
+      }
+      .city-title {
+        margin-top: 50px;
+        text-align: middle;
+        text-decoration: underline;
+      }
 
-      em {
-        color: red;
-        font-style: normal;
+      .images-vertical {
+        height: 700px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        border-radius: 5px;
       }
     </style>
   </head>
   <body>
-    <a href="index.html">Home Page</a>
-    <h1>Cities</h1>
-    <h2>City of Cinders</h2>
-    <img class="Cinders" src="images/CityOfCinders.png" alt="City of Cinders" />
-    <p>
-      A city that has survived because it is built in a volcanoe. The
-      governmental and social stucture has a large heiarchy where the people in
-      the highest layers have a good time and the poeple in the lowest layers
-      suffer near lava.
-    </p>
-    <h3>Characters</h3>
-    <h4>Petruzzo De'Mira</h4>
-    <p>
-      He is a member of the Seeker. Father figure but a mystery for the most
-      part.
-    </p>
-    <a href="characters/petruzzo-De-Mira.html">more</a>
-    <h4>Verbino Agatelo</h4>
-    <p>
-      Mentor of Bosna. So far not much else but he appears to be friends with
-      Petruzzo.
-    </p>
-    <a href="characters/verbino-Agatelo.html">more</a>
-    <h2>Murky Den</h2>
-    <img class="Den" src="images/Tunneltown.png" alt="Merky Den" />
-    <p>
-      Once a peaceful town has now become a continuous warzone against the
-      hoards of void.
-    </p>
-    <h3>Characters</h3>
-    <p>The list of characters in this city.</p>
-    <h4>Mirabela</h4>
-    <p>
-      Half succubus and witch. She's become very helpful as well as a mother
-      figure to some...
-    </p>
-    <a href="characters/mirabela.html">more</a>
-    <h4>Kriv</h4>
-    <p>
-      A minitaur and our go-to blacksmith. He is also a member of the seekers.
-    </p>
-    <a href="characters/kriv.html">more</a>
-    <h4>Imrinar Orthenlin</h4>
-    <p>
-      Murky Den Captain. We don't know much about him, but he has the respect of
-      his troops.
-    </p>
-    <a href="characters/imrinar-Orthenlin.html">more</a>
+    <div class="container">
+      <h1>Cities</h1>
+      <div class="main-area">
+        <div class="button-format-parent">
+          <div class="button-format-child">
+            <form class="button" action="index.html">
+              <button type="submit"><h3>Back to Home Page</h3></button>
+            </form>
+          </div>
+        </div>
+        <h2 class="city-title">City of Cinders</h2>
+        <img
+          class="images-vertical"
+          src="images/CityOfCinders.png"
+          alt="CityOfCinders"
+        />
+        <p class="description">
+          A city that has survived because it is built in a volcanoe. The
+          governmental and social stucture has a large heiarchy where the people
+          in the highest layers have a good time and the poeple in the lowest
+          layers suffer near lava.
+        </p>
+        <h2 class="city-title">Merky Den</h2>
+        <img class="images" src="images/Tunneltown.png" alt="Merky Den" />
+        <p class="description">
+          Once a peaceful town has now become a continuous warzone against the
+          hoards of void.
+        </p>
+      </div>
+    </div>
   </body>
 </html>
