--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
       href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Sono&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="all.css" />
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
@@ -40,10 +47,10 @@
           </div>
         </div>
         <h2 class="header">
-          The contours of memories are washed away by the River of Time
+          The Contours of Memories are Washed Away by the River of Time
         </h2>
         <img
-          class="wasteland"
+          class="images"
           src="images/frozenwasteland.png"
           alt="frozenwasteland"
         />
