--- a/about.html
+++ b/about.html
@@ -4,55 +4,54 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About</title>
+    <title>Chronicles of Tet'Tariel</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Sono&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="all.css" />
+    <link rel="stylesheet" href="index.css" />
+    <style>
+      .button {
+        float: left;
+      }
+      .click-me {
+        color: white;
+        margin-top: 500px;
+      }
+    </style>
   </head>
   <body>
-    <a href="index.html">Home Page</a>
-    <h1>About/Why</h1>
-    <p>
-      Learning HTML, I decided to make a fan-wiki-style website to learn the
-      basics of how to make websites.
-    </p>
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">click me</a>
+    <div class="container">
+      <h1>About</h1>
+      <div class="main-area">
+        <div class="button-format-parent">
+          <div class="button-format-child">
+            <form class="button" action="index.html">
+              <button type="submit"><h3>Back to Home Page</h3></button>
+            </form>
+          </div>
+        </div>
+        <h2 class="header">What the heck was this for?</h2>
+
+        <p class="description">
+          Learning HTML, I decided to make a fan-wiki-style website to learn the
+          basics of how to make websites.
+        </p>
+        <p class="description">Extra thanks to V for creating this world.</p>
+        <a class="click-me" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
+          <p class="click-me">click me</p>
+        </a>
+      </div>
+    </div>
   </body>
 </html>
+
