--- a/characters/petruzzo-De-Mira.html
+++ b/characters/petruzzo-De-Mira.html
@@ -4,48 +4,118 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Petruzzo De'Mira</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Sono&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../all.css" />
+    <link rel="stylesheet" href="../index.css" />
+    <style>
+      .button-format-child {
+        float: left;
+      }
+      .click-me {
+        color: white;
+        margin-top: 500px;
+      }
+      .character-image {
+        height: 250px;
+        border: solid;
+        border-radius: 3px;
+        border-width: 2px;
+        border-color: rgba(28, 28, 28, 0.9);
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+      }
+      .description-child {
+        margin-bottom: 50px;
+        text-align: left;
+      }
+    </style>
   </head>
   <body>
-    <a href="../index.html">Home Page</a>
-    <a href="../cities.html">Cities</a>
-    <h1>Petruzzo De'Mira</h1>
-    <p>
-      Father figure but a mystery for the most part. He is apart of the Ank'Mari
-      and the Templar but for some reason doesn't have the same vendetta that
-      the others have. We are unsure what will happen if he finds out that they
-      are back.
-    </p>
-    <p>
-      Petruzzo is a member of the seekers as well as the Ank'Mari. There is
-      definetely contention in the future.
-    </p>
-    <p>
-      After being killed in a void raid, he mysteriously became undead with no
-      understanding why. To our knowledge, it is because of his line to the
-      Ank'Mari and a prophecy that turned him undead.
-    </p>
-    <p>
-      After becoming undead, his appearance changed a bit. He is now mostly
-      rotten and skeletal and also has 1 purple eye and the eye socket where he lost his eye now glows red. He usually likes
-      to wear hooded cloaks now...
-    </p>
-    <p>
-      Petruzzo's relationship with Mirabel is... well... complicated. While he
-      has totally regretted his decisions that led to this point, Mirabela still
-      shows the utmost affection toward him.
-    </p>
-    <p>
-      Petruzzo has had a rough past. From being apart of a race who were
-      indoctrinated that they were only good to war and eventually being
-      erraticated to a group of seekers who's leader was murdered that broke the
-      group up.
-    </p>
-    <p>
-      Petruzzo's contention to the Ank'Mari makes things extremely complicated.
-      We know that they will be coming towards our location inevitably, but we
-      can't tell Petruzzo just yet in fear that he will turn to them due to them
-      being his family of old.
-    </p>
+    <div class="container">
+      <h1>Characters</h1>
+      <div class="main-area">
+        <div class="button-format-parent">
+          <div class="button-format-child">
+            <form class="button" action="../characters.html">
+              <button type="submit"><h3>Back to Characters</h3></button>
+            </form>
+          </div>
+        </div>
+        <h2 class="header">Petruzzo De'Mira</h2>
+
+        <img
+          class="character-image"
+          src="../characterImages/petruzzoArt.png"
+          alt="characterImages"
+        />
+
+        <ul class="description">
+          <li>
+            <p class="description-child">
+              Father figure but a mystery for the most part. He is apart of the
+              Ank'Mari and the Templar but for some reason doesn't have the same
+              vendetta that the others have. We are unsure what will happen if
+              he finds out that they are back.
+            </p>
+          </li>
+          <li>
+            <p class="description-child">
+              Petruzzo is a member of the seekers as well as the Ank'Mari. There
+              is definetely contention in the future.
+            </p>
+          </li>
+          <li>
+            <p class="description-child">
+              After being killed in a void raid, he mysteriously became undead
+              with no understanding why. To our knowledge, it is because of his
+              line to the Ank'Mari and a prophecy that turned him undead.
+            </p>
+          </li>
+          <li>
+            <p class="description-child">
+              After becoming undead, his appearance changed a bit. He is now
+              mostly rotten and skeletal and also has 1 blue and 1 purple eye.
+              He usually likes to wear hooded cloaks now...
+            </p>
+          </li>
+          <li>
+            <p class="description-child">
+              Petruzzo's relationship with Mirabel is... well... complicated.
+              While he has totally regretted his decisions that led to this
+              point, Mirabela still shows the utmost affection toward him.
+            </p>
+          </li>
+          <li>
+            <p class="description-child">
+              Petruzzo has had a rough past. From being apart of a race who were
+              indoctrinated that they were only good to war and eventually being
+              erraticated to a group of seekers who's leader was murdered that
+              broke the group up.
+            </p>
+          </li>
+          <li>
+            <p class="description-child">
+              Petruzzo's contention to the Ank'Mari makes things extremely
+              complicated. We know that they will be coming towards our location
+              inevitably, but we can't tell Petruzzo just yet in fear that he
+              will turn to them due to them being his family of old.
+            </p>
+          </li>
+        </ul>
+      </div>
+    </div>
   </body>
 </html>
